# sigma-framework

./: LICENSE  README.md  __init__.py  pyproject.toml  setup.py
adapters/: __init__.py  streams.py
core/: __init__.py  merkle.py  psi.py
interfaces/: i_stream.py
metrology/: asic_estimator.py  dfa.py  diffusion_profiler.py  plotter.py  tvla.py  tvla_baseline.py
sigma/: cli.py  factory.py
sigma/core/: primitives.py  types.py
sigma/hash_engines/: wrappers.py
sigma/interfaces/: __init__.py
sigma/metrology/: __init__.py  avalanche.py  microarch.py  orchestrator.py
sigma/strategies/: __init__.py  base.py  lightweight.py  paranoid.py  realtime.py  simultaneous.py
strategies/: base.py  simultaneous.py
